--- a/inf-cpp/CMakeLists.txt
+++ b/inf-cpp/CMakeLists.txt
@@ -80,18 +80,33 @@ find_package(Torch REQUIRED)
 find_package(cugraph REQUIRED)
 # add_subdirectory(cuGraph)
 
-add_executable(inference inference.cpp)    
-set_target_properties(inference PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+add_executable(inference inference.cpp)
+set_target_properties(inference
+PROPERTIES  BUILD_RPATH    "\$ORIGIN"
+            INSTALL_RPATH  "\$ORIGIN"
+            CXX_STANDARD                        17
+            CXX_STANDARD_REQUIRED               ON
+            CUDA_STANDARD                       17
+            CUDA_STANDARD_REQUIRED              ON
+            INTERFACE_POSITION_INDEPENDENT_CODE ON
+)
+target_compile_options(inference
+    PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${CUGRAPH_CXX_FLAGS}>"
+            "$<$<COMPILE_LANGUAGE:CUDA>:${CUGRAPH_CUDA_FLAGS}>"
+)
 target_compile_definitions(inference PUBLIC CUDA_API_PER_THREAD_DEFAULT_STREAM)
-# target_include_directories(inference)
-# cugraphtestutil
-# target_link_libraries(inference frnn ${TORCH_LIBRARIES})
+
 target_link_libraries(inference 
-    PUBLIC
-    frnn cugraph::cugraph ${TORCH_LIBRARIES})
+PUBLIC
+    frnn
+    cugraph::cugraph
+    ${TORCH_LIBRARIES}
+    CUDA::cublas
+    CUDA::cusparse
+    CUDA::cusolver
+    CUDA::curand
+)
 
-
-find_package(nccl)
 add_executable(test_connected_components test_connected_components.cpp)
 set_target_properties(test_connected_components
 PROPERTIES  BUILD_RPATH    "\$ORIGIN"
@@ -112,10 +127,8 @@ target_compile_definitions(test_connected_components PUBLIC CUDA_API_PER_THREAD_
 target_link_libraries(test_connected_components
 PUBLIC
     cugraph::cugraph
-    # $<BUILD_INTERFACE:conda_env>
     CUDA::cublas
     CUDA::cusparse
     CUDA::cusolver
     CUDA::curand
-    # NCCL::NCCL
 )
