--- a/inf-cpp/ExaTrkX/CMakeLists.txt
+++ b/inf-cpp/ExaTrkX/CMakeLists.txt
@@ -52,14 +52,44 @@ target_link_libraries(
 add_library(ActsPluginExaTrkXTriton
 SHARED
   src/ExaTrkXTrackFindingTriton.cpp)
+set_target_properties(ActsPluginExaTrkXTriton
+  PROPERTIES  BUILD_RPATH    "\$ORIGIN"
+              INSTALL_RPATH  "\$ORIGIN"
+              CXX_STANDARD                        17
+              CXX_STANDARD_REQUIRED               ON
+              CUDA_STANDARD                       17
+              CUDA_STANDARD_REQUIRED              ON
+              INTERFACE_POSITION_INDEPENDENT_CODE ON
+              CUDA_SEPARABLE_COMPILATION          ON
+  )
+target_compile_options(ActsPluginExaTrkXTriton
+  PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${CUGRAPH_CXX_FLAGS}>"
+          "$<$<COMPILE_LANGUAGE:CUDA>:${CUGRAPH_CUDA_FLAGS}>")
+target_compile_definitions(ActsPluginExaTrkXTriton PUBLIC CUDA_API_PER_THREAD_DEFAULT_STREAM)
 target_include_directories(
     ActsPluginExaTrkXTriton
     PUBLIC 
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
       $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-  )
+)
+target_include_directories(
+    ActsPluginExaTrkXTriton
+  PRIVATE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+
+)
 target_link_libraries(ActsPluginExaTrkXTriton
 PUBLIC
   /workspace/install/lib/libgrpcclient.so
   /workspace/build/third-party/protobuf/lib/libprotobuf.a
+)
+target_link_libraries(
+  ActsPluginExaTrkXTriton
+  PUBLIC
+    ${TORCH_LIBRARIES}
+)
+target_link_libraries(
+  ActsPluginExaTrkXTriton
+  PRIVATE
+    frnn cugraph ${TORCH_LIBRARIES}
 )
