--- a/inf-cpp/ExaTrkX/CMakeLists.txt
+++ b/inf-cpp/ExaTrkX/CMakeLists.txt
@@ -49,13 +49,17 @@ target_link_libraries(
 #     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 #### ActsPluginExaTrkXTriton
+set(CMAKE_BUILD_RPATH "")
 add_library(ActsPluginExaTrkXTriton
 SHARED
   src/ExaTrkXTrackFindingTriton.cpp)
+
+# target_link_options(
+#   ActsPluginExaTrkXTriton
+#   PRIVATE "LINKER:--no-as-needed"
+# )
 set_target_properties(ActsPluginExaTrkXTriton
-  PROPERTIES  BUILD_RPATH    "\$ORIGIN"
-              INSTALL_RPATH  "\$ORIGIN"
-              CXX_STANDARD                        17
+  PROPERTIES  CXX_STANDARD                        17
               CXX_STANDARD_REQUIRED               ON
               CUDA_STANDARD                       17
               CUDA_STANDARD_REQUIRED              ON
@@ -66,6 +70,7 @@ target_compile_options(ActsPluginExaTrkXTriton
   PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${CUGRAPH_CXX_FLAGS}>"
           "$<$<COMPILE_LANGUAGE:CUDA>:${CUGRAPH_CUDA_FLAGS}>")
 target_compile_definitions(ActsPluginExaTrkXTriton PUBLIC CUDA_API_PER_THREAD_DEFAULT_STREAM)
+target_compile_definitions(ActsPluginExaTrkXTriton PUBLIC TRITON_ENABLE_GPU)
 target_include_directories(
     ActsPluginExaTrkXTriton
     PUBLIC 
@@ -78,18 +83,23 @@ target_include_directories(
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 
 )
-target_link_libraries(ActsPluginExaTrkXTriton
-PUBLIC
-  /workspace/install/lib/libgrpcclient.so
-  /workspace/build/third-party/protobuf/lib/libprotobuf.a
-)
-target_link_libraries(
-  ActsPluginExaTrkXTriton
-  PUBLIC
-    ${TORCH_LIBRARIES}
-)
+# target_link_libraries(ActsPluginExaTrkXTriton
+# PRIVATE
+
+# )
+
 target_link_libraries(
   ActsPluginExaTrkXTriton
   PRIVATE
-    frnn cugraph ${TORCH_LIBRARIES}
+    frnn 
+    cugraph 
+    ${TORCH_LIBRARIES}
+    # /workspace/install/lib/libgrpcclient_static.a
+    /workspace/install/lib/libgrpcclient.so
+    /workspace/build/third-party/protobuf/lib/libprotobuf.a
+)
+target_include_directories(
+  ActsPluginExaTrkXTriton
+  PUBLIC
+     /workspace/install/include
 )
